<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/orange"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.Registration">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="352dp"
        android:layout_height="506dp"
        android:background="@drawable/rectangle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameRegistration"
            android:layout_width="326dp"
            android:layout_height="85dp"
            android:layout_marginTop="50dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/userNameTextRegistration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/user_name"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegistration"
            android:layout_width="326dp"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameRegistration"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordTextRegistration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/password"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password2Registration"
            android:layout_width="326dp"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRegistration"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordText2Registration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/password2"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:background="@drawable/btn_sign_disable"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2Registration" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="317dp"
            android:layout_height="53dp"
            android:text="@string/Notification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>