...
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <fragment
            android:id="@+id/map2"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="-80dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        <ImageButton
            android:id="@+id/time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/round_btn"
            android:contentDescription="@string/calendar"
            android:src="@drawable/baseline_access_time_filled_24"
...
